# bert4rec-pytorch

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md
scripts/: prepare_data.py  train.py
src/bert4rec/: config.py  data.py  eval.py  losses.py  masking.py  model.py  train.py
tests/: test_losses.py  test_masking.py  test_model.py  test_train.py
