[project]
name = "bert4rec-pytorch"
version = "0.1.0"
description = "A from-scratch PyTorch implementation of BERT4Rec (bidirectional Transformer + Cloze objective) for sequential recommendation, with a head-to-head comparison against SASRec on MovieLens-1M."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DoodlingAWorld" }]
dependencies = ["torch>=2.0", "numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "matplotlib>=3.7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
